fix: fixed spacing under product image

--- a/web/app/themes/juniper-theme/src/scss/_project.scss
+++ b/web/app/themes/juniper-theme/src/scss/_project.scss
@@ -1283,3 +1283,7 @@ body.woocommerce-checkout div#customer_login {
         }
     }
 }
+
+.slick-dotted.slick-slider {
+    margin-bottom: 0px !important;
+}
